# novel

./: .env.example  .gitignore  API使用说明.md  Dockerfile  OPTIMIZATION_README.md  PERFORMANCE_OPTIMIZATION.md  README.md  SearchResult_bookName_异常修复说明.md  bookName错误修复完成报告.md  bookName错误修复说明.md  bookName错误处理总结.md  book_source_test_report.md  chapter_fix_summary.md  check_deployment.py  cli.py  comprehensive_test.py  conftest.py  debug_api_logs.py  debug_search.py  debug_toc.py  debug_toc_deep.py  debug_toc_detailed.py  debug_toc_logs.py  debug_toc_parser.py  deep_debug_toc.py  deploy.sh  deploy_test.sh  diagnose_server.py  diagnose_xianni.py  docker-compose.yml  download_fix_final.py  download_fix_solution.py  download_issue_final_fix.py  download_issue_final_summary.md  download_issue_summary.md  e2e_optimized_test.py  enhanced_download_optimizer.py  final_download_solution.py  final_download_test.py  final_test.py  (+106 more)
app/: main.py
app_backup_20260514_072447/: main.py
cache/: sources_list.cache
downloads/: _.txt
rules/: main-rules-optimized.json  optimized-rule-01.json  optimized-rule-02.json  optimized-rule-03.json  optimized-rule-04.json  optimized-rule-05.json  optimized-rule-06.json  optimized-rule-07.json  optimized-rule-08.json  optimized-rule-10.json  optimized-rule-11.json  optimized-rule-12.json  optimized-rule-13.json  optimized-rule-15.json  optimized-rule-17.json  optimized-rule-20.json  rule-01.json  rule-02.json  rule-03.json  rule-04.json  rule-05.json  rule-06.json  rule-07.json  rule-08.json  rule-09.json  rule-10.json  rule-11.json  rule-11.json.backup  (+15 more)
(+109 files in other folders)
