[build-system]
requires = ["setuptools>=68.0", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "novel"
version = "1.0.0"
description = "小说聚合搜索与下载 CLI + API"
requires-python = ">=3.10"
dependencies = [
    "click>=8.1.0",
    "fastapi>=0.95.0",
    "uvicorn>=0.21.0",
    "pydantic>=2.10.0",
    "pydantic-settings>=2.0.0",
    "requests>=2.28.2",
    "beautifulSoup4>=4.12.0",
    "aiohttp>=3.8.4",
    "python-multipart>=0.0.6",
    "jinja2>=3.1.2",
    "Pillow>=9.5.0",
    "ebooklib>=0.17.1",
    "lxml>=4.9.2",
    "httpx==0.27.0",
    "brotli>=1.0.0",
]

[project.optional-dependencies]
dev = [
    "pytest>=7.0.0",
    "pytest-asyncio>=0.21.0",
    "pytest-cov>=4.0.0",
]

[project.scripts]
novel = "cli:cli"

[tool.setuptools.packages.find]
include = ["app*"]
